Going for a major change. Will it work?